@@ -3,6 +3,7 @@
  gradle build - builds code and creates a single jar in build/libs/frostwire.jar
  gradle clean - cleans the build.
  gradle tasks - shows available tasks.
+ gradle run - runs the app
 
  Make sure ${ANT_HOME} is properly set for these tasks to work
  gradle gettextExtract - extract all the strings from the sourcecode into frostwire.pot
@@ -14,16 +15,37 @@ group 'com.frostwire'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 import org.gradle.internal.os.OperatingSystem
 
-sourceCompatibility = (!OperatingSystem.current().isLinux()) ? JavaVersion.VERSION_12 : JavaVersion.VERSION_11
-targetCompatibility = (!OperatingSystem.current().isLinux()) ? JavaVersion.VERSION_12 : JavaVersion.VERSION_11
+sourceCompatibility = (!OperatingSystem.current().isLinux()) ? JavaVersion.VERSION_17 : JavaVersion.VERSION_11
+targetCompatibility = (!OperatingSystem.current().isLinux()) ? JavaVersion.VERSION_17 : JavaVersion.VERSION_11
 
 compileJava {
     options.encoding = '8859_1'
     options.fork = true
-    options.compilerArgs += ["-Xlint:deprecation"]
+    options.compilerArgs += ['-Xlint:deprecation']
+}
+
+application {
+    mainClass = 'com.limegroup.gnutella.gui.Main'
+    applicationDefaultJvmArgs = [
+            '-Djava.library.path=lib/native',
+            '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+            '-Xms64m',
+            '-Xmx512m',
+            '-Xss768k',
+            '-Dcom.sun.management.jmxremote.port=9595',
+            '-Dcom.sun.management.jmxremote.ssl=false',
+            '-Dcom.sun.management.jmxremote.authenticate=false',
+            '-Djava.rmi.server.hostname=127.0.0.1',
+            '-agentlib:jdwp=transport=dt_socket,address=9696,server=y,suspend=n',
+            '-Ddebug=1'
+    ]
+    if (OperatingSystem.current().isMacOsX()) {
+        applicationDefaultJvmArgs += ['--add-exports=java.desktop/com.apple.laf=ALL-UNNAMED', '-Dsun.java2d.metal=true']
+    }
 }
 
 repositories {
@@ -31,14 +53,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.re2j:re2j:1.4'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+    implementation 'com.google.re2j:re2j:1.6'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'com.googlecode.gettext-commons:gettext-commons:0.9.8'
     implementation 'com.h2database:h2:1.4.200'
 
     implementation fileTree(dir: 'lib/jars', include: ['*.jar'])
-    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 sourceSets {
@@ -65,9 +87,11 @@ sourceSets {
 }
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
     archiveFileName = 'frostwire.jar'
 
-    exclude('META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF')
+    exclude('META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF', 'META-INF/*.md')
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 
